# ICPCUDA-pod

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/icpcuda-app/: CMakeLists.txt  icpcuda-app-original.cpp  icpcuda-app-simple.cpp  icpcuda-app.cpp
